# adnmusic

./: .gitignore  pyproject.toml
src/: main.py  secuencia.py
src/generadores/: __init__.py  cajitamusicalgenerador.py
src/graficadores/: __init__.py  graficador.py  pygame.py  terminal.py
src/material/plantas/vitis vinifera/: vitis vinifera mitochondrion.gb
src/reproductores/: __init__.py  cajitamusicalmingus.py  reproductor.py
tests/: test_adnmusic.py
